# cardretro

./: .gitignore  CMakeLists.txt  README.md  fetch_posters.py  package.json
.github/workflows/: pages.yml
.wolf/: anatomy.md  buglog.json  cerebrum.md  cron-state.json  identity.md  memory.md  suggestions.json  token-ledger.json
.wolf/hooks/: _session.json
src/: main.c
web/: index.html
